@@ -247,6 +247,8 @@ global:
 	mpd_song_get_uri;
 	mpd_song_get_tag;
 	mpd_song_get_duration;
+	mpd_song_get_start;
+	mpd_song_get_end;
 	mpd_song_get_last_modified;
 	mpd_song_set_pos;
 	mpd_song_get_pos;
